--- a/Arrays3.html
+++ b/Arrays3.html
@@ -109,6 +109,9 @@ console.log(numbersPlusNine);
 const numbersDividedByEight = numbers.map(n => n % 8);
 console.log(numbersDividedByEight);
 
+const numbersPlusOneHundredFive = numbers.map(n => n + 105);
+console.log(numbersPlusOneHundredFive);
+
 // MAP
 // Also create a new array that keeps only one particular property of an object:
 
