--- a/Arrays3.html
+++ b/Arrays3.html
@@ -243,7 +243,7 @@ const usersThree = [
   { id: '932j', name: 'gary' },
 ]
 
-const userThree = usersThree.findIndex(user => userThree.id === '6gbe')
+const userThree = usersThree.findIndex(user => usersThree.id === '6gbe')
 console.log(userThree) // 1
 
 // slice
@@ -411,7 +411,6 @@ console.log(postsBig) // [{ id: "fe38", name: "thomas" }, { id: "fe38", name: "t
 
 // I think the method’s name is pretty clear here. However, keep in mind that just like sort does, reverse reverses the array in place!
 
-const numbers = [1, 2, 3, 4, 5]
 
 numbers.reverse()
 console.log(numbers) // [5, 4, 3, 2, 1]
@@ -428,19 +427,18 @@ console.log(lastMessage) // I'm fine
 // push
 // This is a widely used method when working with arrays. In fact push allows you to add one or more elements to an array. It is also usually used to build a new array based on an old one.
 
-const todoItems = [1, 2, 3, 4, 5]
+const todoItemsList = [1, 2, 3, 4, 5]
 
 const itemsIncremented = []
-for (let i = 0; i < items.length; i++) {
-  itemsIncremented.push(items[i] + 1)
+for (let i = 0; i < itemsIncremented.length; i++) {
+  itemsIncremented.push(itemsIncremented[i] + 1)
 }
 
 console.log(itemsIncremented) // [2, 3, 4, 5, 6]
 
-const todos = ['Write an article', 'Proofreading']
-todos.push('Publish the article')
-console.log(todos) // ['Write an article', 'Proofreading', 'Publish the article']
-
+const todoItemsListTwo = ['Write an article', 'Proofreading']
+todoItemsListTwo.push('Publish the article')
+console.log(todoItemsListTwo) // ['Write an article', 'Proofreading', 'Publish the article']
 
 </script>
 
