--- a/Arrays3.html
+++ b/Arrays3.html
@@ -451,6 +451,16 @@ console.log(months) // ['January', 'May']
 const monthsSliced = [...months.slice(0, 1), ...months.slice(4)]
 console.log(monthsSliced) // ['January', 'May']
 
+// With shift
+const firstNumber = numbers.shift()
+console.log(firstNumber) // 1
+console.log(numbers) // [2, 3, 4, 5]
+
+// Without shift
+const [firstNumber, ...numbersWithoutOne] = numbers
+console.log(firstNumber) // 1
+console.log(numbersWithoutOne) // [2, 3, 4, 5]
+
 </script>
 
 </body>
