adding more to dos

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -485,6 +485,8 @@ const newNumbers = [1, 2, ...numbers]
 console.log(newNumbers) // [1, 2, 3, 4, 5]
 
 
+const todosFive = ['Write an article', 'Proofreading']
+console.log([...todosFive, 'Publish the article']) // ['Write an article', 'Proofreading', 'Publish the article']
 
 
 </script>
