--- a/Calc.html
+++ b/Calc.html
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+
+
 <div class=”calculator”>
   <div class=”calculator__display”>0</div>
   <div class=”calculator__keys”> … </div>
 </div>
+
+</body>
+</html>
