adding js file and link to html

--- a/Calc.html
+++ b/Calc.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="Calc.css">
 </head>
 <body>
+<script src="Calc.js"></script>
 
 
 <div class=”calculator”>
