adding function for loading multiple images

--- a/functions.html
+++ b/functions.html
@@ -25,6 +25,27 @@ loadImage("images/sprites", run);
 
 // Nested callback
 	
+loadImage("images/sprites", function(sprites) {
+  // game loop goes here
+});
+
+
+// Loading Multiple Images
+function loadImages(names, callback) {
+
+  var n,name,
+      result = {},
+      count  = names.length,
+      onload = function() { if (--count == 0) callback(result); };
+
+  for(n = 0 ; n < names.length ; n++) {
+    name = names[n];
+    result[name] = document.createElement('img');
+    result[name].addEventListener('load', onload);
+    result[name].src = "images/" + name + ".png";
+  }
+
+}
 
 
 
