adding game loop of images once loaded

--- a/functions.html
+++ b/functions.html
@@ -47,6 +47,17 @@ function loadImages(names, callback) {
 
 }
 
+// Start your game loop once all of the images have completed loading:
+
+var IMAGES = ['player', 'monsters', 'backgrounds'];
+
+function run(images) {
+  // game loop goes here
+}
+
+loadImages(IMAGES, run);
+
+
 
 
 
