adding while loops

--- a/LoopsAndIteration.html
+++ b/LoopsAndIteration.html
@@ -13,12 +13,25 @@ for (step = 0; step < 5; step++) {
   console.log('Walking east one step');
 }
 
-
 var i = 0;
 do {
   i += 1;
   console.log(i);
 } while (i < 5);
+
+var n = 0;
+var x = 0;
+while (n < 3) {
+  n++;
+  x += n;
+}
+
+while (true) {
+  console.log('Hello, world!');
+}
+
+
+
 </script>
 
 <form name="selectForm">
