--- a/loop.html
+++ b/loop.html
@@ -27,7 +27,16 @@ checkiandj:
       console.log('j = ' + j);
   }
 
-  
+var arr = [3, 5, 7];
+arr.foo = 'hello';
+
+for (var i in arr) {
+   console.log(i); // logs "0", "1", "2", "foo"
+}
+
+for (var i of arr) {
+   console.log(i); // logs 3, 5, 7
+}
 
 
 
