addnig more arrays

--- a/Arrays3.html
+++ b/Arrays3.html
@@ -16,6 +16,9 @@ const numbers = [1,2,3,4,5,6,7,8,9,10];
 const numbersPlusOne = numbers.map(n => n + 1);
 console.log(numbersPlusOne);
 
+const numbersMinusFour = numbers.map(n => n - 4);
+console.log(numbersTimesFour);
+
 const numbersPlusForty = numbers.map(n => n + 1);
 console.log(numbersPlusForty);
 
