adding pop to delete element

--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -24,6 +24,8 @@ fruits.push("cantaloupe", "peach");
 fruits.unshift("pineapple", "lemon");
 alert( fruits );
 
+// delete element using pop ,the element is deleted from the end
+
 
 
 
