--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -25,10 +25,16 @@ fruits.unshift("pineapple", "lemon");
 alert( fruits );
 
 // delete element using pop ,the element is deleted from the end
+alert( fruits.pop() )
+alert( fruits );
 
+// delete element using shift,the element is deleted from the beginning
 
+alert( fruits.shift() );
+alert( fruits );
 
-
+let sent = ["I", "study", "Javescript"];
+sent.splice(1, 1); // from index 1 remove 1 element
 
 
 
