--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -35,7 +35,10 @@ alert( fruits );
 
 let sent = ["I", "study", "Javescript"];
 sent.splice(1, 1); // from index 1 remove 1 element
+alert( sent );
 
+let sent2 = ["I", "study", "Javescript", "right", "now"]; // remove 3 first elements and replace iwth another 
+sent2.splice(0, 3, "Let's", "dance", "right", "now");
 
 
 
