--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -37,7 +37,7 @@ let sent = ["I", "study", "Javescript"];
 sent.splice(1, 1); // from index 1 remove 1 element
 alert( sent );
 
-let sent2 = ["I", "study", "Javescript", "right", "now"]; // remove 3 first elements and replace iwth another 
+let sent2 = ["I", "study", "Javescript", "right", "now"]; // remove 3 first elements and replace with another 
 sent2.splice(0, 3, "Let's", "dance", "right", "now");
 
 
