removing an item using shift

--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -41,6 +41,14 @@ let sent2 = ["I", "study", "Javescript", "right", "now"]; // remove 3 first elem
 sent2.splice(0, 3, "Let's", "dance", "right", "now");
 
 
+// delete element using shift
+alert( fruits.shift() ); // remove apple and alert it. 
+alert( fruits ) // orange, plum
+
+
+
+
+
 
 </script>
 </body>
