adding deletion and insertion

--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -45,6 +45,8 @@ sent2.splice(0, 3, "Let's", "dance", "right", "now");
 alert( fruits.shift() ); // remove apple and alert it. 
 alert( fruits ) // orange, plum
 
+// Adding updating deleting elements using splice
+// sent3.splice(index[, deleteCount, elem1, ..., elemN])
 
 
 
