adding more splice

--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -48,6 +48,10 @@ alert( fruits ) // orange, plum
 // Adding updating deleting elements using splice
 // sent3.splice(index[, deleteCount, elem1, ..., elemN])
 
+sent.splice(2, 0, "complex", "language");
+// from index 2
+// delete 0
+// then insert "complex", "language"
 
 
 
