--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -31,6 +31,7 @@ alert( fruits );
 // delete element using shift,the element is deleted from the beginning
 
 alert( fruits.shift() );
+alert( fruits.shift() );
 alert( fruits );
 
 let sent = ["I", "study", "Javescript"];
