--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -56,6 +56,13 @@ sent.splice(2, 0, "complex", "language");
 // then insert "complex", "language"
 
 
+var orange = { a:1 };
+console.log(orange.a);
+
+// Orange is the variable, a is found within the object, which holds the value 1
+
+
+
 
 
 </script>
