adding an undefined lookup

--- a/JSFundamentals.html
+++ b/JSFundamentals.html
@@ -61,7 +61,10 @@ console.log(orange.a);
 
 // Orange is the variable, a is found within the object, which holds the value 1
 
+// orange.a is a lookup for the key "a", so it evaluates to the value 1
 
+console.log(orange.a); // 1
+console.log(orange.z); // undefined
 
 
 
