adding numbers plus 1)

--- a/Essentials.html
+++ b/Essentials.html
@@ -6,11 +6,13 @@
 <body>
 
 	<script type="text/javascript">
-		
+		const numbers = [1,2,3,4]
+		const numbersPlusOne = numbers.map(n => n + 1)
+		console.log(numbersPlusOne);
 
 
 
-		
+
 	</script>
 
 </body>
