adding all activities

--- a/Essentials.html
+++ b/Essentials.html
@@ -10,7 +10,10 @@
 		const numbersPlusOne = numbers.map(n => n + 1)
 		console.log(numbersPlusOne);
 
-
+		const allActivities = [
+		{ title: 'my activity', coordinates: [50.123, 3.291]},
+		{ title:}
+		]
 
 
 	</script>
