adding all coordiantes

--- a/Essentials.html
+++ b/Essentials.html
@@ -12,9 +12,10 @@
 
 		const allActivities = [
 		{ title: 'my activity', coordinates: [50.123, 3.291]},
-		{ title:}
-		]
-
+		{ title: 'Another activity', coordiantes: [1.238, 4.292]},
+		];
+const allCoordinates = allActivities.map(activity => activity.coordiantes)
+console.log(allCoordinates);
 
 	</script>
 
